--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -9,6 +9,21 @@ architectury {
 
 loom {
     accessWidenerPath = project(":common").loom.accessWidenerPath
+
+    runs {
+        data {
+            inherit client
+            setConfigName("Fabric Data")
+            ideConfigGenerated(true)
+
+            vmArg("-Dfabric-api.datagen")
+            vmArg("-Dfabric-api.datagen.output-dir=${project(":common").file("src/generated/resources")}")
+            vmArg("-Dfabric-api.datagen.modid=ifly")
+
+            runDir "build/datagen"
+
+        }
+    }
 }
 
 configurations {
