--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -13,16 +13,16 @@ I believe I can fly
 '''
 #logoFile = ""
 
-[[dependencies.ifly]]
-modId = "minecraft"
-mandatory = true
-versionRange = "[1.20.1,)"
-ordering = "NONE"
-side = "BOTH"
-
-[[dependencies.ifly]]
-modId = "architectury"
-mandatory = true
-versionRange = "[9.1.12,)"
-ordering = "AFTER"
-side = "BOTH"
+#[[dependencies.ifly]]
+#modId = "minecraft"
+#mandatory = true
+#versionRange = "[1.20.1,)"
+#ordering = "NONE"
+#side = "BOTH"
+#
+#[[dependencies.ifly]]
+#modId = "architectury"
+#mandatory = true
+#versionRange = "[9.1.12,)"
+#ordering = "AFTER"
+#side = "BOTH"
