--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -93,6 +93,14 @@ publishing {
 
     // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
     repositories {
-        // Add repositories to publish to here.
+        if (providers.environmentVariable("NANITE_TOKEN").orNull) {
+            maven {
+                url "${maven_url}${isSnapshot ? 'snapshots' : 'releases'}"
+                credentials {
+                    username = "nanite"
+                    password = providers.environmentVariable("NANITE_TOKEN").get()
+                }
+            }
+        }
     }
 }
