--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,9 @@ forge_version=49.0.19
 
 neoforge_version=20.4.91-beta
 
+#libs
+ftb_lib_version=2004.1.3-SNAPSHOT
+
 # Publishing
 curseforge_id=907685
 modrinth_id=rNh7EKJN
