--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionNeoForge")) { transitive = false }
+
+    modApi "dev.ftb.mods:ftb-library-neoforge:${rootProject.ftb_lib_version}"
 }
 
 processResources {
