--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ allprojects {
 
     repositories {
         maven { url "https://maven.neomc.dev/releases"}
+        maven { url "https://maven.ftb.dev/snapshots" }
+        maven { url "https://maven.ftb.dev/releases" }
     }
 
     tasks.withType(JavaCompile) {
