--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
+
+    modApi "dev.ftb.mods:ftb-library-fabric:${rootProject.ftb_lib_version}"
 }
 
 processResources {
