--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
+
+//    modApi "dev.ftb.mods:ftb-library-forge:${rootProject.ftb_lib_version}"
 }
 
 processResources {
