--- a/gradle.properties
+++ b/gradle.properties
@@ -3,18 +3,18 @@ org.gradle.jvmargs=-Xmx2048M
 minecraft_version=1.20.4
 enabled_platforms=fabric,forge,neoforge
 
-archives_base_name=ifly
-mod_version=84.0.0
+archives_base_name=ascension_shard
+mod_version=2004.1.0
 maven_group=dev.wuffs
 
-architectury_version=11.0.11
+architectury_version=11.1.17
 
-fabric_loader_version=0.15.3
-fabric_api_version=0.93.1+1.20.4
+fabric_loader_version=0.15.7
+fabric_api_version=0.96.4+1.20.4
 
-forge_version=49.0.19
+forge_version=49.0.32
 
-neoforge_version=20.4.91-beta
+neoforge_version=20.4.198
 
 #libs
 ftb_lib_version=2004.1.3-SNAPSHOT
