--- a/common/build.gradle
+++ b/common/build.gradle
@@ -15,16 +15,26 @@ dependencies {
     modCompileOnly "dev.ftb.mods:ftb-library:${rootProject.ftb_lib_version}"
 }
 
+def ENV = System.getenv()
+
 publishing {
     publications {
         mavenCommon(MavenPublication) {
-            artifactId = rootProject.archives_base_name
+            artifactId = rootProject.archives_base_name + "-" + project.name
             from components.java
         }
     }
 
     // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
     repositories {
-        // Add repositories to publish to here.
+        if (ENV.NANITE_TOKEN) {
+            maven {
+                url "https://maven.nanite.dev/releases"
+                credentials {
+                    username = "nanite"
+                    password = "${ENV.NANITE_TOKEN}"
+                }
+            }
+        }
     }
 }
