--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx2048M
 
 minecraft_version=1.20.4
-enabled_platforms=fabric,forge,neoforge
+enabled_platforms=fabric,neoforge
 
 archives_base_name=ascension_shard
 mod_version=2004.1.0
