--- a/common/build.gradle
+++ b/common/build.gradle
@@ -2,6 +2,8 @@ architectury {
     common(rootProject.enabled_platforms.split(","))
 }
 
+ext.isSnapshot = providers.environmentVariable("SNAPSHOT").map {it == "true"}.getOrElse(false)
+
 loom {
     accessWidenerPath = file("src/main/resources/ascensionshard.accesswidener")
 }
@@ -27,9 +29,9 @@ publishing {
 
     // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
     repositories {
-        if (ENV.NANITE_TOKEN) {
+        if (providers.environmentVariable("NANITE_TOKEN").orNull) {
             maven {
-                url "https://maven.nanite.dev/releases"
+                url "https://maven.nanite.dev/${isSnapshot ? 'snapshots' : 'releases'}"
                 credentials {
                     username = "nanite"
                     password = "${ENV.NANITE_TOKEN}"
