--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -87,8 +87,6 @@ components.java {
     }
 }
 
-def ENV = System.getenv()
-
 publishing {
     publications {
         mavenFabric(MavenPublication) {
@@ -101,10 +99,10 @@ publishing {
     repositories {
         if (providers.environmentVariable("NANITE_TOKEN").orNull) {
             maven {
-                url "https://maven.nanite.dev/${isSnapshot ? 'snapshots' : 'releases'}"
+                url "${maven_url}${isSnapshot ? 'snapshots' : 'releases'}"
                 credentials {
                     username = "nanite"
-                    password = "${ENV.NANITE_TOKEN}"
+                    password = providers.environmentVariable("NANITE_TOKEN").get()
                 }
             }
         }
