More ui changes

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -37,7 +37,8 @@ dependencies {
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
 
-//    modApi "dev.ftb.mods:ftb-library-forge:${rootProject.ftb_lib_version}"
+    modApi "dev.ftb.mods:ftb-library-forge:${rootProject.ftb_lib_version}"
+    modApi "dev.ftb.mods:ftb-teams-forge:${rootProject.ftb_teams_version}"
 }
 
 processResources {
