--- a/build.gradle
+++ b/build.gradle
@@ -40,9 +40,10 @@ allprojects {
     group = rootProject.maven_group
 
     repositories {
-        maven { url "https://maven.neomc.dev/releases"}
+        maven { url "https://maven.neomc.dev/releases" }
         maven { url "https://maven.ftb.dev/snapshots" }
         maven { url "https://maven.ftb.dev/releases" }
+        maven { url "https://maven.teamresourceful.com/repository/maven-public/" }
     }
 
     tasks.withType(JavaCompile) {
