--- a/common/build.gradle
+++ b/common/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury:${rootProject.architectury_version}"
     modCompileOnly "dev.ftb.mods:ftb-library:${rootProject.ftb_lib_version}"
+    modCompileOnly "dev.ftb.mods:ftb-teams:${rootProject.ftb_teams_version}"
+    modApi "earth.terrarium.cadmus:cadmus-common-$minecraft_version:$cadmus_version"
 }
 
 sourceSets.main.resources.srcDir 'src/generated/resources'
