--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
 
     modApi "dev.ftb.mods:ftb-library-fabric:${rootProject.ftb_lib_version}"
+    modApi "dev.ftb.mods:ftb-teams-fabric:${rootProject.ftb_teams_version}"
 }
 
 processResources {
