--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ minecraft_version=1.20.4
 enabled_platforms=fabric,forge,neoforge
 
 archives_base_name=ascension_shard
-mod_version=2004.1.0
+mod_version=2004.1.2
 maven_group=dev.wuffs
 
 architectury_version=11.1.17
@@ -18,6 +18,9 @@ neoforge_version=20.4.198
 
 #libs
 ftb_lib_version=2004.1.3-SNAPSHOT
+ftb_teams_version=2004.1.2-SNAPSHOT
+cadmus_version=1.2.2
+resourceful_lib_version=2.4.9
 
 # Publishing
 curseforge_id=907685
