--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ allprojects {
         maven { url "https://maven.neomc.dev/releases" }
         maven { url "https://maven.ftb.dev/snapshots" }
         maven { url "https://maven.ftb.dev/releases" }
+        maven { url 'https://dl.cloudsmith.io/public/geckolib4/geckolib/maven/' }
         maven { url "https://maven.teamresourceful.com/repository/maven-public/" }
     }
 
