--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,14 @@ allprojects {
         maven { url "https://maven.neomc.dev/releases" }
         maven { url "https://maven.ftb.dev/snapshots" }
         maven { url "https://maven.ftb.dev/releases" }
-        maven { url 'https://dl.cloudsmith.io/public/geckolib4/geckolib/maven/' }
+        maven {
+            name = 'GeckoLib'
+            url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
+            content {
+                includeGroupByRegex("software\\.bernie.*")
+                includeGroup("com.eliotlash.mclib")
+            }
+        }
         maven { url "https://maven.teamresourceful.com/repository/maven-public/" }
     }
 
