--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -47,6 +47,8 @@ dependencies {
 
     modApi "dev.ftb.mods:ftb-library-fabric:${rootProject.ftb_lib_version}"
     modApi "dev.ftb.mods:ftb-teams-fabric:${rootProject.ftb_teams_version}"
+
+    modImplementation "software.bernie.geckolib:geckolib-fabric-${minecraft_version}:${geckolib_version}"
 }
 
 processResources {
