--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx2048M
 
 minecraft_version=1.20.4
-enabled_platforms=fabric,forge,neoforge
+enabled_platforms=fabric,neoforge
 
 archives_base_name=ascension_shard
-mod_version=2004.1.5
+mod_version=2004.1.6
 maven_group=dev.wuffs
 
 architectury_version=11.1.17
@@ -14,13 +14,14 @@ fabric_api_version=0.96.4+1.20.4
 
 forge_version=49.0.32
 
-neoforge_version=20.4.198
+neoforge_version=20.4.200
 
 #libs
 ftb_lib_version=2004.2.0-SNAPSHOT
 ftb_teams_version=2004.1.2-SNAPSHOT
 cadmus_version=1.2.2
 resourceful_lib_version=2.4.9
+geckolib_version=4.4.2
 
 # Publishing
 curseforge_id=907685
