--- a/gradle.properties
+++ b/gradle.properties
@@ -1,27 +1,25 @@
 org.gradle.jvmargs=-Xmx2048M
 
-minecraft_version=1.20.4
+minecraft_version=1.21
 enabled_platforms=fabric,neoforge
 
 archives_base_name=ascension_shard
-mod_version=2004.1.6
+mod_version=2100.0.0
 maven_group=dev.wuffs
 
-architectury_version=11.1.17
+architectury_version=13.0.4
 
-fabric_loader_version=0.15.7
-fabric_api_version=0.96.4+1.20.4
+fabric_loader_version=0.16.0
+fabric_api_version=0.100.6+1.21
 
-forge_version=49.0.32
-
-neoforge_version=20.4.200
+neoforge_version=21.0.87-beta
 
 #libs
-ftb_lib_version=2004.2.0-SNAPSHOT
-ftb_teams_version=2004.1.2-SNAPSHOT
+ftb_lib_version=2100.1.2
+ftb_teams_version=2100.1.0
 cadmus_version=1.2.2
-resourceful_lib_version=2.4.9
-geckolib_version=4.4.2
+resourceful_lib_version=3.0.9
+geckolib_version=4.5.6
 
 # Publishing
 curseforge_id=907685
