--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
-    id "dev.architectury.loom" version "1.5-SNAPSHOT" apply false
-    id "me.modmuss50.mod-publish-plugin" version "0.4.5"
+    id "dev.architectury.loom" version "1.7-SNAPSHOT" apply false
+    id "me.modmuss50.mod-publish-plugin" version "0.5.2"
 }
 
 ext.isSnapshot = providers.environmentVariable("SNAPSHOT").map { it == "true" }.getOrElse(false)
@@ -40,7 +40,7 @@ allprojects {
     group = rootProject.maven_group
 
     repositories {
-        maven { url "https://maven.neomc.dev/releases" }
+        maven { url "https://maven.wuffs.dev/repository/Minecraft/" }
         maven { url "https://maven.ftb.dev/snapshots" }
         maven { url "https://maven.ftb.dev/releases" }
         maven {
@@ -56,7 +56,7 @@ allprojects {
 
     tasks.withType(JavaCompile) {
         options.encoding = "UTF-8"
-        options.release = 17
+        options.release = 21
     }
 
     java {
@@ -75,12 +75,6 @@ publishMods {
         displayName = "[Fabric - ${minecraft_version}] ${project.name} ${mod_version}"
         modLoaders.add("fabric")
     }
-
-//    def forgeOptions = publishOptions {
-//        file = project.provider { project(":forge").tasks.remapJar }.flatMap { it.archiveFile }
-//        displayName = "[Forge - ${minecraft_version}] ${project.name} ${mod_version}"
-//        modLoaders.add("forge")
-//    }
 
     def neoOptions = publishOptions {
         file = project.provider { project(":neoforge").tasks.remapJar }.flatMap { it.archiveFile }
@@ -107,10 +101,6 @@ publishMods {
         }
     }
 
-//    curseforge("curseforgeForge") {
-//        from(curseForgeOptions, forgeOptions)
-//    }
-
     curseforge("curseforgeNeo") {
         from(curseForgeOptions, neoOptions)
     }
@@ -123,17 +113,12 @@ publishMods {
             }
         }
 
-//        modrinth("modrinthForge") {
-//            from(modrinthOptions, forgeOptions)
-//        }
-
         modrinth("modrinthNeo") {
             from(modrinthOptions, neoOptions)
         }
     }
 
     github {
-//        file = project.provider { project(":forge").tasks.remapJar }.flatMap { it.archiveFile }
         file = project.provider { project(":neoforge").tasks.remapJar }.flatMap { it.archiveFile }
         additionalFiles.from project.provider { project(":fabric").tasks.remapJar }.flatMap { it.archiveFile }
         repository = "${github_repo}"
