--- a/common/build.gradle
+++ b/common/build.gradle
@@ -16,9 +16,9 @@ dependencies {
     modApi "dev.architectury:architectury:${architectury_version}"
     modCompileOnly "dev.ftb.mods:ftb-library:${ftb_lib_version}"
     modCompileOnly "dev.ftb.mods:ftb-teams:${ftb_teams_version}"
-    modApi "earth.terrarium.cadmus:cadmus-common-$minecraft_version:$cadmus_version"
+//    modApi "earth.terrarium.cadmus:cadmus-common-$minecraft_version:$cadmus_version"
 
-    modApi ("software.bernie.geckolib:geckolib-fabric-${minecraft_version}:${geckolib_version}")
+    modApi ("software.bernie.geckolib:geckolib-common-${minecraft_version}:${geckolib_version}")
 }
 
 sourceSets.main.resources.srcDir 'src/generated/resources'
